samples/_failures_safe/1761433098_44386e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e376269.c: In function ‘main’:
./samples/SAFE/__tmp_5e376269.c:169:5: error: expected expression at end of input
  169 |     if (logs.count > 0)
      |     ^~
./samples/SAFE/__tmp_5e376269.c:169:5: error: expected declaration or statement at end of input
